--- a/lw5/lw5.2/index.html
+++ b/lw5/lw5.2/index.html
@@ -15,40 +15,40 @@
     </div>
   </header>
   <div class="container">
-  <div class="block-content">
-    <div class="title">
-      <p class="title__quote">
-        Мы берем на себя много, потому что<br/>мало чего боимся
-      </p>
-      <p class="title__author">&mdash; Том Демарко. Deadline</p>
+    <div class="block-content">
+      <div class="title">
+        <p class="title__quote">
+          Мы берем на себя много, потому что</br>мало чего боимся
+        </p>
+        <p class="title__author">&mdash; Том Демарко. Deadline</p>
       </div>
-        <div class="block">
-          <h1 class="block__writer">Jane Doe</h1>
-          <img src="images/cherta.png" alt="Черта">
-          <p class="block__content">
-            В 1930-е годы прошлого века физик Джордж Гамоу из</br>
-            университета штата Колорадо начал публиковать</br>
-            мини-сериал рассказов о неком мистере Томпкинсе,</br>
-            банковском клерке средних лет. Мистер Томпкинс, как</br>
-            явствовало из этих историй, интересовался современной</br>
-            наукой.
-          </p>
-          <h2 class="block__hobby">Мое хобби</h2>
-          <p class="block__content hobby">
-            Он регулярно посещал вечерние лекции местного профессора</br>
-            и, разумеется, всегда засыпал на самом интересном месте.</br>
-            А когда просыпался, то обнаруживал себя в каком-нибудь</br>
-            параллельном мире, где один из основных законов физики</br>
-            действовал не так, как в его мире.
-          </p>
-          <div class="write-me">
-            <a href="https://vk.com/x_o_p_bl_lll"class="write-me_link ">
-              <span class="link__hyperlink">
-                Напиши мне<span class="arrow"> &rarr;</span>
-              </span>
-            </a>
-          </div>   
-       </div>
+      <div class="block">
+        <h1 class="block__writer">Jane Doe</h1>
+        <img src="images/cherta.png" alt="Черта">
+        <p class="block__content">
+          В 1930-е годы прошлого века физик Джордж Гамоу из</br>
+          университета штата Колорадо начал публиковать</br>
+          мини-сериал рассказов о неком мистере Томпкинсе,</br>
+          банковском клерке средних лет. Мистер Томпкинс, как</br>
+          явствовало из этих историй, интересовался современной</br>
+          наукой.
+        </p>
+        <h2 class="block__hobby">Мое хобби</h2>
+        <p class="block__content hobby">
+          Он регулярно посещал вечерние лекции местного профессора</br>
+          и, разумеется, всегда засыпал на самом интересном месте.</br>
+          А когда просыпался, то обнаруживал себя в каком-нибудь</br>
+          параллельном мире, где один из основных законов физики</br>
+          действовал не так, как в его мире.
+        </p>
+        <div class="write-me">
+          <a href="https://vk.com/x_o_p_bl_lll"class="write-me_link ">
+            <span class="link__hyperlink">
+              Напиши мне<span class="arrow"> &rarr;</span>
+            </span>
+          </a>
+        </div>
+        </div>
     </div>
     <div class="block-page">
       <img src="images/woman.png" alt="Изображение девушки">
@@ -70,7 +70,7 @@
       </div>
     </div>
   </div>
-  <div class="clear"><div/>
+  <div class="clear"></div>
   <div class="block-movies">
     <div class="block-movies__storage">
       <h2 class="storage__cinema">Любимые фильмы</h2>
@@ -166,7 +166,7 @@
       <textarea class="content__write"></textarea>
       <button class="content__button">Отправить</button>
     </form>
-</div>
+  </div>
 <footer class="postscript">
   <p class="postcript__paragarph">
     © 2006-2018 Поволжский государственный технологический университет, ФГБОУ ВО «ПГТУ»
